[gd_scene load_steps=10 format=3 uid="uid://byrcbqat0n2px"]

[ext_resource type="Script" uid="uid://drtyjcj7olgfx" path="res://scripts/debug_log/debug_window.gd" id="1_j4w8w"]
[ext_resource type="Resource" uid="uid://crjhix0osmtnf" path="res://resources/ui_events.res" id="2_274f6"]
[ext_resource type="FontFile" uid="uid://do40418waa8w3" path="res://assets/fonts/Inter-Regular.otf" id="2_da5xc"]
[ext_resource type="Script" uid="uid://ctop6ixvl36cs" path="res://scripts/debug_log/debug_log.gd" id="2_lgt6s"]
[ext_resource type="FontFile" uid="uid://c14w1y1r54wgi" path="res://assets/fonts/Inter-Bold.otf" id="3_w27g3"]
[ext_resource type="FontFile" uid="uid://b3xb1fpllhnf4" path="res://assets/fonts/Inter-Italic.otf" id="4_jcerd"]
[ext_resource type="FontFile" uid="uid://tfj3o1e1wytn" path="res://assets/fonts/Inter-BoldItalic.otf" id="5_jgvml"]
[ext_resource type="FontFile" uid="uid://bjeupg0ikc2kv" path="res://assets/fonts/Monospace.ttf" id="6_vcylm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eeptt"]
bg_color = Color(0.2, 0.2, 0.2, 1)

[node name="Debug" type="Node" node_paths=PackedStringArray("window")]
script = ExtResource("1_j4w8w")
ui_events = ExtResource("2_274f6")
window = NodePath("Window")

[node name="Window" type="Window" parent="."]
disable_3d = true
oversampling_override = 1.0
title = "Debug Log"
initial_position = 5
size = Vector2i(800, 600)

[node name="Background" type="Panel" parent="Window"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_eeptt")

[node name="RichTextLabel" type="RichTextLabel" parent="Window/Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
theme_override_colors/selection_color = Color(0.419608, 0.231373, 0.929412, 0.588235)
theme_override_fonts/normal_font = ExtResource("2_da5xc")
theme_override_fonts/bold_font = ExtResource("3_w27g3")
theme_override_fonts/bold_italics_font = ExtResource("5_jgvml")
theme_override_fonts/italics_font = ExtResource("4_jcerd")
theme_override_fonts/mono_font = ExtResource("6_vcylm")
bbcode_enabled = true
scroll_following = true
autowrap_mode = 1
context_menu_enabled = true
threaded = true
selection_enabled = true
script = ExtResource("2_lgt6s")

[connection signal="close_requested" from="Window" to="." method="_on_window_close_requested"]
[connection signal="focus_exited" from="Window" to="." method="_on_window_focus_exited"]
[connection signal="window_input" from="Window" to="." method="_on_window_window_input"]
